test/sema/typeck/for/iterator-missing-next.out
error: `next` not found in impl.
--> iterator-missing-next.dora:2:1 - 6:9
1 error found.
