test/sema/typeck/for/iterator-missing-next.dora
class Foo
impl std::traits::Iterator for Foo {
    type Item = Int;
}

fn f(x: Foo): Int {
    for i in x {
        return i;
    }
    0
}
